Updated POM to Java 11. Removed various Warnings. Updated Postgres version. Updated Java Mail version.