@@ -11,31 +11,31 @@ import org.apache.commons.logging.LogFactory;
 
 public abstract class BaseUtil {
     private final Log logger = LogFactory.getLog(getClass());
-    
+
     protected Properties props;
-    
+
     protected Integer getStripedInt(String input) {
-    	Integer i = new Integer(0);
+    	Integer i = Integer.valueOf(0);
     	try {
-    		i = new Integer(input.trim().replaceAll("[^0-9]", ""));
+    		i = Integer.valueOf(input.trim().replaceAll("[^0-9]", ""));
     	} catch (NumberFormatException nfe) {
     		logger.error("Error parsing: " + input);
     	}
     	return i;
     }
-    
+
 	protected Time convertStringToTime(String time, String format) {
 		return convertStringToTime(time, format, null);
 	}
-	
+
 	protected Time convertStringToTime(String time, String format, String format2) {
 		Time t = null;
 		SimpleDateFormat sdf = new SimpleDateFormat(format);
 		long ms = 0;
-		
+
 		if (time.length() == 5)
 			time = new String("0").concat(time);
-		
+
 		try {
 			try {
 				ms = sdf.parse(time).getTime();
@@ -54,7 +54,7 @@ public abstract class BaseUtil {
 	protected Date convertStringToDate(String date, String format) {
 		return convertStringToDate(date, format, null);
 	}
-	
+
 	protected Date convertStringToDate(String date, String format, String format2) {
 		Date d = null;
 		SimpleDateFormat sdf = new SimpleDateFormat(format);
